# DrugEx

./: .gitignore  LICENSE  README.md  agent.py  classifier.py  dataset.py  designer.py  environ.py  execution_example.sh  figure.py  generator.py  metric.py  model.py  organic.py  plot.py  predictor.py  pretrainer.py  rlearner.py  sampler.py  setup.cfg  train_graph.py  train_smiles.py  trainer.py  util.py
data/: voc.txt  voc_graph.txt  voc_smiles.txt
figure/: Figure S1.tif  Figure_1.tif  Figure_11.tif  Figure_2.tif  Figure_3.tif  Figure_4.tif  Figure_5.tif  Figure_6.tif  Figure_8.tif  Figure_9.tif  Figure_S2.tif  Figure_S3.tif
figures/: fig_1.tif  fig_2.tif  fig_3.tif  fig_4AB.tif  fig_4CE.tif  fig_5.tif  fig_6.tif  fig_7A.tif  fig_7B.tif
models/: __init__.py  attention.py  classifier.py  explorer.py  generator.py  rlearner.py
models/transform/: __init__.py  attn.py  gpt2graph.py  gpt2smiles.py  layer.py  vanilla.py
src/drugex/: __init__.py  __main__.py  agent.py  cli.py  dataset.py  designer.py  environ.py  figure.py  metric.py  model.py  organic.py  pretrainer.py  util.py
utils/: __init__.py  fingerprints.py  metric.py  modifier.py  nsgaii.py  objective.py  optim.py  sascorer.py  threadpool.py  vocab.py
