##########################
# Setup.py Configuration #
##########################
[metadata]
name = drugex
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =

[options]
install_requires =
    numpy >= 1.14
    scikit-learn >= 0.18
    pandas >= 0.22
    torch >= 1.0
    matplotlib >= 2.0
    tqdm
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    drugex = drugex.cli:main
